Fix text color variable for improved readability

--- a/PharmaHub/src/styles.css
+++ b/PharmaHub/src/styles.css
@@ -19,7 +19,7 @@ html {
     --shadow-light: #ffffff;
     --primary: rgba(255, 255, 255, 0.85);
     --gray:rgba(110, 110, 110, 0.93);
-    --text: #d1c6ba;
+    --text: #bbb2a9;
     --text-2:#5d5c5c;
     --bg-navbar:#596c7b;
     --shadow-dark-nav:#4c5c69;
